# vigyl

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: README.md
cli/: README.md  package-lock.json  package.json  tsconfig.json
cli/src/: index.ts
docs/: architecture.md  job-spec.md  keeper-spec.md  security.md
examples/: hourly-crank.ts  price-threshold.ts  vault-rebalance.ts
idl/: vigyl.json
programs/vigyl/: Cargo.toml
programs/vigyl/src/: lib.rs
src/: executor.rs  job.rs  keeper.rs  lib.rs  proof.rs  slash.rs
src/trigger/: account_state.rs  cron.rs  mod.rs  price_threshold.rs  slot_epoch.rs
ts-sdk/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
ts-sdk/src/: encoding.test.ts  encoding.ts  index.ts  pda.ts  trigger.ts  types.ts  vigyl.ts
